<resources>
    <string name="app_name">Expense Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rupees">₹</string>
    <string name="no_records">You Don\'t have any records to display. Please click below button to add the expense!!</string>
    <string name="please_enter_valid_credentials">Please enter valid credentials</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="save_expense">save expense</string>
    <string name="paid_by">Paid By</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="title">Title</string>
    <string name="_01_04_2022">01/04/2022</string>
    <string name="some_description_is_displayed_here">Some description is displayed here</string>
    <string name="user_1">User 1</string>
    <string name="split_equally_with">Split equally with</string>
    <string name="user_2_user_3_user_4">User 2, USer 3, User 4</string>
</resources>